// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render custom polling 1`] = `
.c1 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c6 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c14 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
}

.c11 .icon-check {
  display: none;
}

.c11 .icon-copy {
  display: block;
}

.c11.copied .icon-check {
  display: block;
}

.c11.copied .icon-copy {
  display: none;
}

.c10 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c3 {
  box-sizing: border-box;
  margin-right: 4px;
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c2 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 48px;
  padding-top: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  position: relative;
}

.c7 {
  margin: 0;
}

.c8 {
  box-sizing: border-box;
  padding-right: 16px;
  position: absolute;
  right: 0px;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #2F3659;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
  white-space: pre;
}

.c13 .icon {
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <div>
      Custom Header Component
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  <pre
                    class="c7"
                  >
                    some kind of command
                  </pre>
                </div>
              </div>
              <div
                class="c8"
              >
                <button
                  class="c9 c10"
                  kind="secondary"
                >
                  <div
                    class="c11 icon-container"
                  >
                    <span
                      class="c12 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c12 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <span
        class="c14 icon icon-restore "
        color="light"
        font-size="4"
      />
      <span>
        custom polling text  |  
         
        00
        :
        00
        
      </span>
    </div>
  </div>
</div>
`;

exports[`render custom polling error 1`] = `
.c2 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c5 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c14 {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-top: 24px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 48px;
  padding-top: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  position: relative;
}

.c8 {
  margin: 0;
}

.c9 {
  box-sizing: border-box;
  padding-right: 16px;
  position: absolute;
  right: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c15 .icon {
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #f50057;
}

.c18 {
  margin-top: 6px;
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Command
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  <pre
                    class="c8"
                  >
                    some kind of command
                  </pre>
                </div>
              </div>
              <div
                class="c9"
              >
                <button
                  class="c10 c11"
                  kind="secondary"
                >
                  <div
                    class="c12 icon-container"
                  >
                    <span
                      class="c13 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c13 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
    >
      <div
        class="c15"
      >
        <span
          class="c16 icon icon-warning "
          color="danger"
        />
        custom error content
      </div>
      <div
        class="c17"
      >
        Possible reasons
      </div>
      <ul
        class="c18"
      >
        <li>
          error reason 1
        </li>
        <li>
          error reason 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`render custom polling success 1`] = `
.c2 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c5 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 48px;
  padding-top: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  position: relative;
}

.c8 {
  margin: 0;
}

.c9 {
  box-sizing: border-box;
  padding-right: 16px;
  position: absolute;
  right: 0px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c14 .icon {
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #00bfa5;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Command
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  <pre
                    class="c8"
                  >
                    some kind of command
                  </pre>
                </div>
              </div>
              <div
                class="c9"
              >
                <button
                  class="c10 c11"
                  kind="secondary"
                >
                  <div
                    class="c12 icon-container"
                  >
                    <span
                      class="c13 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c13 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
    >
      <span
        class="c15 icon icon-checkmark-circle "
        color="success"
      />
      custom polling success text
    </div>
  </div>
</div>
`;

exports[`render default polling 1`] = `
.c2 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c5 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 48px;
  padding-top: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  position: relative;
}

.c8 {
  margin: 0;
}

.c9 {
  box-sizing: border-box;
  padding-right: 16px;
  position: absolute;
  right: 0px;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #2F3659;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
  white-space: pre;
}

.c14 .icon {
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Command
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  <pre
                    class="c8"
                  >
                    some kind of command
                  </pre>
                </div>
              </div>
              <div
                class="c9"
              >
                <button
                  class="c10 c11"
                  kind="secondary"
                >
                  <div
                    class="c12 icon-container"
                  >
                    <span
                      class="c13 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c13 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
    >
      <span
        class="c15 icon icon-restore "
        color="light"
        font-size="4"
      />
      <span>
        Waiting for Teleport Service  |  
         
        00
        :
        00
        
      </span>
    </div>
  </div>
</div>
`;

exports[`render default polling error 1`] = `
.c2 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c5 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c14 {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-top: 24px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 48px;
  padding-top: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  position: relative;
}

.c8 {
  margin: 0;
}

.c9 {
  box-sizing: border-box;
  padding-right: 16px;
  position: absolute;
  right: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c15 .icon {
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #f50057;
}

.c18 {
  margin-top: 6px;
  margin-bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Command
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  <pre
                    class="c8"
                  >
                    some kind of command
                  </pre>
                </div>
              </div>
              <div
                class="c9"
              >
                <button
                  class="c10 c11"
                  kind="secondary"
                >
                  <div
                    class="c12 icon-container"
                  >
                    <span
                      class="c13 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c13 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
    >
      <div
        class="c15"
      >
        <span
          class="c16 icon icon-warning "
          color="danger"
        />
        We could not detect the Teleport Service you were trying to add
      </div>
      <div
        class="c17"
      >
        Possible reasons
      </div>
      <ul
        class="c18"
      >
        <li>
          error reason 1
        </li>
        <li>
          error reason 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`render default polling success 1`] = `
.c2 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c5 {
  box-sizing: border-box;
  padding-bottom: 0px;
  padding-top: 8px;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
}

.c12 .icon-check {
  display: none;
}

.c12 .icon-copy {
  display: block;
}

.c12.copied .icon-check {
  display: block;
}

.c12.copied .icon-copy {
  display: none;
}

.c11 {
  height: 28px;
  width: 28px;
  border-radius: 20px;
  min-height: auto;
  padding: 0;
  margin-top: -4px;
}

.c4 {
  box-sizing: border-box;
  margin-right: 4px;
  white-space: pre;
  word-break: break-all;
  font-size: 12px;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
  overflow: scroll;
  line-height: 20px;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 48px;
  padding-top: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  position: relative;
}

.c8 {
  margin: 0;
}

.c9 {
  box-sizing: border-box;
  padding-right: 16px;
  position: absolute;
  right: 0px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c14 .icon {
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  padding: 16px;
  border-radius: 8px;
  border: 2px solid #00bfa5;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Command
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  $
                </div>
                <div
                  class="text-to-copy"
                >
                  <pre
                    class="c8"
                  >
                    some kind of command
                  </pre>
                </div>
              </div>
              <div
                class="c9"
              >
                <button
                  class="c10 c11"
                  kind="secondary"
                >
                  <div
                    class="c12 icon-container"
                  >
                    <span
                      class="c13 icon icon-copy "
                      color="light"
                      data-testid="btn-copy"
                    />
                    <span
                      class="c13 icon icon-check "
                      color="light"
                      data-testid="btn-check"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
    >
      <span
        class="c15 icon icon-checkmark-circle "
        color="success"
      />
      The Teleport Service successfully join this Teleport cluster
    </div>
  </div>
</div>
`;
